Added delays to increase stability Added additional step to printer selection